crates/aura-signature/tests/boundaries/raw_bytes_cannot_use_transcript_signer.stderr
error[E0277]: the trait bound `[u8]: SecurityTranscript` is not satisfied
 --> tests/boundaries/raw_bytes_cannot_use_transcript_signer.rs:8:61
  |
8 |     let _ = aura_signature::sign_ed25519_transcript(crypto, raw_bytes, private_key).await;
  |             ---------------------------------------         ^^^^^^^^^ the trait `SecurityTranscript` is not implemented for `[u8]`
  |             |
  |             required by a bound introduced by this call
  |
note: required by a bound in `sign_ed25519_transcript`
 --> src/transcript.rs
  |
  | pub async fn sign_ed25519_transcript<E, T>(
  |              ----------------------- required by a bound in this function
...
  |     T: SecurityTranscript + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^ required by this bound in `sign_ed25519_transcript`

error[E0277]: the trait bound `[u8]: SecurityTranscript` is not satisfied
 --> tests/boundaries/raw_bytes_cannot_use_transcript_signer.rs:8:13
  |
8 |     let _ = aura_signature::sign_ed25519_transcript(crypto, raw_bytes, private_key).await;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SecurityTranscript` is not implemented for `[u8]`
  |
note: required by a bound in `sign_ed25519_transcript`
 --> src/transcript.rs
  |
  | pub async fn sign_ed25519_transcript<E, T>(
  |              ----------------------- required by a bound in this function
...
  |     T: SecurityTranscript + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^ required by this bound in `sign_ed25519_transcript`

error[E0277]: the trait bound `[u8]: SecurityTranscript` is not satisfied
 --> tests/boundaries/raw_bytes_cannot_use_transcript_signer.rs:8:85
  |
8 |     let _ = aura_signature::sign_ed25519_transcript(crypto, raw_bytes, private_key).await;
  |                                                                                     ^^^^^ the trait `SecurityTranscript` is not implemented for `[u8]`
  |
note: required by a bound in `sign_ed25519_transcript`
 --> src/transcript.rs
  |
  | pub async fn sign_ed25519_transcript<E, T>(
  |              ----------------------- required by a bound in this function
...
  |     T: SecurityTranscript + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^ required by this bound in `sign_ed25519_transcript`
